--- a/code/css/style.css
+++ b/code/css/style.css
@@ -245,4 +245,27 @@
     }
   }
   
-  
+/*--------------------------------------*/
+
+body {
+    text-align: center;
+}
+
+ul li {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+header li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+header ul li a {
+  text-decoration: none;
+}
+
+header h1 {
+  text-transform: uppercase;
+}
