--- a/code/css/style.css
+++ b/code/css/style.css
@@ -10,6 +10,18 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
+   @font-face {
+    font-family: 'ATRotisSemiSerif';
+    src: url('../fonts/ATRotisSemiSerif.eot');
+    src: url('../fonts/ATRotisSemiSerif.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/ATRotisSemiSerif.woff2') format('woff2'),
+        url('../fonts/ATRotisSemiSerif.woff') format('woff'),
+        url('../fonts/ATRotisSemiSerif.ttf') format('truetype'),
+        url('../fonts/ATRotisSemiSerif.svg#ATRotisSemiSerif') format('svg');
+    font-weight: 100;
+    font-style: normal;
+    font-display: swap;
+  }
 
    html {
     color: #222;
@@ -248,7 +260,10 @@
 /*--------------------------------------*/
 
 body {
-    text-align: center;
+  text-align: center;
+  font-family: 'ATRotisSemiSerif';
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 ul li {
@@ -257,15 +272,98 @@ ul li {
   margin: 0;
 }
 
+ul {
+  padding: 0;
+}
+
 header li {
   display: inline-block;
   margin-right: 20px;
 }
 
-header ul li a {
+header a {
   text-decoration: none;
+  color: #000;
+}
+
+p.current, a.current{
+  color: #ffb700;
+}
+
+header ul li a:hover {
+  color: #ffb700;
+  font-weight: 600;
 }
 
 header h1 {
   text-transform: uppercase;
+}
+
+h1, h2, h3 {
+  color: #22408E;
+}
+
+h3.precio {
+  color: #ffb700;
+}
+
+nav.menus a, nav.carta a {
+  text-decoration: none;
+  color: #22408E;
+}
+
+nav.menus a:hover, nav.carta a:hover {
+  color: #1b3570;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../icons/icomoon.eot?axwa6m');
+  src:  url('../icons/icomoon.eot?axwa6m#iefix') format('embedded-opentype'),
+    url('../icons/icomoon.ttf?axwa6m') format('truetype'),
+    url('../icons/icomoon.woff?axwa6m') format('woff'),
+    url('../icons/icomoon.svg?axwa6m#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-clipboard-check:before {
+  content: "\e901";
+  color: #ffb700;
+}
+.icon-calendar:before {
+  content: "\e953";
+}
+
+
+.reserva-link {
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+}
+
+.reserva-link i {
+  font-size: 40px;
+}
+
+.reserva-link:hover {
+  color: #ffb700;
 }
